[BGPT] Fix paint/pagination/composited-paginated-outlined-box.html

For SPv1, we don't fragment a composited or squashed layer, but should
create a single fragment for it under the parent fragment where the
layer's border box starts. Previously we used overflow box to determine
fragments causing the composited/squashed layer to be placed in wrong
parent fragment when the layer has overflows. Now use border box rect
in the case.

Bug: 854192
Cq-Include-Trybots: luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ib05e8629f423b3a1960de1fc8f3989c42f54766f
Reviewed-on: https://chromium-review.googlesource.com/1180377
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584615}
Former-commit-id: 429c5dcef93750aae315c80cdbfaea74d43c965c